engr441/while-infer/tests/valid/While_Valid_3.while
int sum(int[] ls) {
    int i = 0;
    int sum = 0;
    while(i < |ls|) {
    	if(ls[i] < 0) { i = i + 1; continue; }
        sum = sum + ls[i];
        i = i + 1;
    }
    return sum;
}

void main() {
     assert sum([]) == 0;
     assert sum([1,2,3]) == 6;
     assert sum([1,-1,2,-2,3]) == 6;     
     assert sum([123,981,1,3,0]) == 1108;
     assert sum([123,-1,981,1,-1,3,0]) == 1108;     
}
